# Hatch

./: .augmentignore  .commitlintrc.json  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  verify_codex_implementation.py  verify_codex_syntax.py  wobble_results_20260210_140855.txt
__temp__/: plan_for_ext_deps_install_support.md  plan_python_env_manager.md  plan_python_env_manager_origin.md
docs/: _config.yml  index.md
hatch/: __init__.py  cli_hatch.py  environment_manager.py  package_loader.py  python_dependency_manager.py  python_environment_manager.py  registry_explorer.py  registry_retriever.py  template_generator.py
overrides/: main.html
scripts/: fix_unused_test_results.py
tests/: README.md  cli_test_utils.py  run_environment_tests.py  test_cli_version.py  test_data_utils.py  test_dependency_orchestrator_consent.py  test_docker_installer.py  test_env_manip.py  test_hatch_installer.py  test_installer_base.py  test_mcp_cli_all_host_specific_args.py  test_mcp_cli_backup_management.bak  test_mcp_cli_backup_management.py  test_mcp_cli_direct_management.bak  test_mcp_cli_direct_management.py  test_mcp_cli_discovery_listing.py  test_mcp_cli_host_config_integration.py  test_mcp_cli_host_specific_args.py  test_mcp_cli_package_management.bak  test_mcp_cli_package_management.py  test_mcp_cli_partial_updates.py  test_mcp_environment_integration.bak  test_mcp_pydantic_architecture_v4.py  test_mcp_server_config_models.py  test_mcp_sync_functionality.bak  test_non_tty_integration.py  test_online_package_loader.py  test_python_environment_manager.py  (+4 more)
(+204 files in other folders)
